# ma-min-app

./: .env.example  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: build-images.yml
docker/: api.Dockerfile  ui.Dockerfile  worker.Dockerfile
scripts/: dev_server.sh  ingest_corpus.py
src/ma_app/: api.py  llm.py  orchestrator.py  postprocess.py  prompts.py  retriever.py  storage.py
src/ui/: app.py
